Fix UI JAR startup, update README, create Windows executable build, and verify all functionality
Co-authored-by: sriram980980 <6083924+sriram980980@users.noreply.github.com>